--- a/contact/index.html
+++ b/contact/index.html
@@ -91,7 +91,7 @@
                 </div>
 
                 <!-- Form liên hệ -->
-                <div class="col-md-6 ">
+                <div class="col-md-6 text-center ">
                     <h4>Gửi Thắc Mắc hoặc Câu Hỏi</h4>
                     <form action="#" method="POST">
                         <div class="mb-3">
