tao mới sửa ...

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,8 @@
     <title>Giới Thiệu - LuxStay</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/customer/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Lora:wght@400;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -59,8 +60,9 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <form class="search-form d-flex">
-                        <input type="text" class="form-control me-2" placeholder="Tìm kiếm phòng..." aria-label="Tìm kiếm phòng">
-                        <button class="btn btn-warning" type="submit">Tìm kiếm</button>
+                        <input type="text" class="form-control me-2" placeholder="Tìm kiếm phòng..."
+                            aria-label="Tìm kiếm phòng">
+                        <button class="btn btn-warning" type="submit">TTìm kiếm</button>
                     </form>
                 </div>
             </div>
@@ -96,14 +98,16 @@
                     <div class="facility-item">
                         <img src="/image/wifi-158401_1280.webp" alt="" width="100%">
                         <h5>Wifi miễn phí</h5>
-                        <p>Chúng tôi cung cấp Wifi miễn phí tốc độ cao, đảm bảo bạn luôn kết nối với bạn bè và công việc.</p>
+                        <p>Chúng tôi cung cấp Wifi miễn phí tốc độ cao, đảm bảo bạn luôn kết nối với bạn bè và công
+                            việc.</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="facility-item">
                         <img src="/image/gym.jpg" alt="" width="100%">
                         <h5>Phòng tập gym</h5>
-                        <p>Hãy rèn luyện sức khỏe trong không gian phòng gym hiện đại của chúng tôi với đầy đủ thiết bị.</p>
+                        <p>Hãy rèn luyện sức khỏe trong không gian phòng gym hiện đại của chúng tôi với đầy đủ thiết bị.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4">
