--- a/about/index.html
+++ b/about/index.html
@@ -52,7 +52,7 @@
 
                 <!-- Đặt phòng (CTA) -->
                 <div class="col-md-2 text-end">
-                    <a href="#" class="btn btn-warning btn-book">Đặt phòng</a>
+                    <a href="#" class="btn btn-warning btn-book">Đặt phòngooooo</a>
                 </div>
             </div>
 
